# lpinta_pipeline

./: Lpinta  README.md  lpinta.py  pyGSB2DAT  pyproject.toml  setup.py
example/: notes_Lpinta_proc_07_03_2024.txt  source_Lpinta.bashrc
old/: pipeline.in
