[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygsb2dat"
version = "0.0.1"
description = "Combine legacy GMRT raw voltage files to DADA file format"
readme = "README.md"
authors = [{ name = "Arul Pandian B",
email = "arulpandian022@gmail.com" }]
license = { file = "LICENSE" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["Legacy GMRT","GSB",]
 
dependencies = [ "baseband", "astropy", "numpy","argparse",]
 
requires-python = ">=3.6"
